--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "simple-import-sort"
+      "react-app"
     ]
   },
   "browserslist": {
